--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 		<title>电影之家-电影，海报，剧本，影评打分，会员下载</title>
 	</head>
+
 	<body>
-		
-		
-		
+
+		<div class="container">
+
+			<div> <br>
+			
+			<a href="/"> LOGO  </a>
+			
+			<br> <br> </div>
+
+			<ul class="nav nav-pills">
+				<li role="presentation" class="active">
+					<a href="#">电影</a>
+				</li>
+				<li role="presentation">
+					<a href="#">海报</a>
+				</li>
+				<li role="presentation">
+					<a href="#">剧本</a>
+				</li>
+				<li role="presentation">
+					<a href="#">评论</a>
+				</li>
+			</ul>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+
+		</div>
 	</body>
+
 </html>
