Signed-off-by: yiliang9117 <957671586@qq.com>

--- a/movie/index.html
+++ b/movie/index.html
@@ -33,16 +33,17 @@
 						<li role="presentation">
 							<a href="/movie-home">主页</a>
 						</li>
-						<li role="presentation">
+						<li role="presentation" class="active">
 							<a href="/movie">电影</a>
 						</li>
-						<li role="presentation" class="active">
+						<li role="presentation">
 							<a href="/picture">海报</a>
 						</li>
 						<li role="presentation">
 							<a href="/novel">剧本</a>
 						</li>
 					</ul>
+
 				</div>
 				<!--导航分类标签结束-->
 
@@ -71,6 +72,151 @@
 											<div class="row">
 												<div class="pic_update_time">2018-09-22</div>
 											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
 										</div>
 									</div>
 
