--- a/index.html
+++ b/index.html
@@ -9,46 +9,307 @@
 
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+		<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8020/movie-home/css/index.css" />
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
+
 		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-		<title>电影之家-电影，海报，剧本，影评打分，会员下载</title>
+		<title>海报主页</title>
 	</head>
 
 	<body>
 
 		<div class="container">
 
-			<div> <br>
-			
-			<a href="/"> LOGO  </a>
-			
-			<br> <br> </div>
+			<div>
+				<div class="page-header">
+					<h1>电影之家<small>这是我们的口号</small></h1>
+				</div>
 
-			<ul class="nav nav-pills">
-				<li role="presentation" class="active">
-					<a href="#">电影</a>
-				</li>
-				<li role="presentation">
-					<a href="#">海报</a>
-				</li>
-				<li role="presentation">
-					<a href="#">剧本</a>
-				</li>
-				<li role="presentation">
-					<a href="#">评论</a>
-				</li>
-			</ul>
-			
-			
-			
-			
-			
-			
-			
-			
-			
+				<!--导航分类标签开始-->
+				<div class="row">
 
-		</div>
+					<ul class="nav nav-tabs">
+						<li role="presentation" class="active">
+							<a href="/">主页</a>
+						</li>
+						<li role="presentation">
+							<a href="movie">电影</a>
+						</li>
+						<li role="presentation">
+							<a href="picture">海报</a>
+						</li>
+						<li role="presentation">
+							<a href="novel">剧本</a>
+						</li>
+					</ul>
+
+				</div>
+
+				
+				<!--导航分类标签结束-->
+
+				<div class="row txt_list">
+
+					<div class="row img_list_more">
+						<a href="#">更多文字</a>
+					</div>
+					<ul class="list-group">
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+						<a href="#">
+							<li class="list-group-item">
+								<div class="txt_title">这里假装是一个很长的标题Vestibulum at eros </div>
+								<div class="row">
+									<div class="txt_update_time">2018-09-22</div>
+								</div>
+							</li>
+						</a>
+					</ul>
+				</div>
+
+				<div class="row img_list">
+					<!--图片列表开始-->
+					<div class="row img_list_more">
+						<a href="#">更多海报</a>
+					</div>
+
+					<div class="row">
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+						<!--单个电影海报开始-->
+						<a href="#">
+							<div class="col-sm-6 col-md-4">
+								<div class="thumbnail">
+
+									<img src="http://127.0.0.1:8020/movie-home/img/test_movie_bg/12.jpg" alt="...">
+									<div class="caption">
+										<h3>这个假装是图片的标题</h3>
+										<div class="">
+											<p>这里有很多图片的描述</p>
+											<div class="pic_reading_num">热度：1258；</div>
+											<div class="pic_reading_num">评分：8；</div>
+											<div class="pic_reading_num">分类：好莱坞；</div>
+											<div class="row">
+												<div class="pic_update_time">2018-09-22</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+						<!--单个电影海报结束-->
+
+					</div>
+					<!--图片列表结束-->
+				</div>
+
+				<div class="page-foot">
+					<h1>电影之家<small>这是我们的口号</small></h1>
+				</div>
+
+				<!--页面大容器结束-->
+			</div>
+
 	</body>
 
 </html>
